crates/lobo-cli/tests/snapshots/help_parity__release.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Build lobo-agent, zip it with release.json, scan for secrets, upload to bucket lobo

Usage:
  lobo release [OPTIONS]

Flags:
  -h, --help  help for release

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
