crates/lobo-cli/tests/snapshots/help_parity__version.snap
---
source: crates/lobo-cli/tests/help_parity.rs
expression: "String::from_utf8(output).unwrap()"
---
Print version, commit and build date

Usage:
  lobo version [OPTIONS]

Flags:
  -h, --help  help for version

Global Flags:
      --config <string>  config file (dotenv; the OS env is never read) [default: /home/u/.config/lobo/config.env]
